[package]
name = "caps-log"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.2"
base64 = "0.22.1"
rand = "0.8.5"
crossterm = "0.28.1"
colored = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
